--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=battleshipProject
+application.vendor=avalo
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,12 +33,15 @@ dist.jar=${dist.dir}/battleshipProject.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/battleshipProject
+endorsed.classpath=
 excludes=
-file.reference.mysql-connector-java-8.0.11.jar=C:\\Users\\avalo\\Desktop\\mysql-connector-java-8.0.11.jar
+file.reference.jcalendar-1.4.jar=jcalendar-1.4.jar
+file.reference.mysql-connector-java-8.0.11.jar=mysql-connector-java-8.0.11.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
+    ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.mysql-connector-java-8.0.11.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
